# gardem-api

./: .dockerignore  .gitignore  .skjoldignore  Dockerfile  pyproject.toml
gardem_api/: __init__.py  auth.py  broker.py  db.py  emmiter.py  logger.py
gardem_api/routes/: __init__.py  auth.py  probe.py
gardem_api/routes/farm_note/: __init__.py  models.py  schema.py
gardem_api/routes/farm_notes/: __init__.py  models.py
gardem_api/routes/farms/: __init__.py  models.py  schema.py
gardem_api/routes/gardens/: __init__.py  models.py  schema.py
gardem_api/routes/notes/: __init__.py  models.py  schema.py
gardem_api/routes/seeds/: __init__.py  models.py  schema.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  secrets.yaml  service.yaml
tests/unit/: conftest.py
